Annulla, Ricalcola e Visualizza busta paga

--- a/src/python/colf/bustapaga/templates/bustapaga.html
+++ b/src/python/colf/bustapaga/templates/bustapaga.html
@@ -8,7 +8,7 @@
 <body>
 <center>
 
-<table border="3" cellspacing="0"
+<table border="3" cellspacing="0" width="100%"
        style="border-collapse: collapse; border-left-width:1px; border-right-width:0px; border-top-width:1px; border-bottom-width:1px"
        bordercolor="#C0C0C0" height="1" cellpadding="0">
 <tbody>
@@ -157,7 +157,7 @@
 
 
 </font>
-<table border="1" cellspacing="0" style="border-collapse: collapse; border-top-width:0px; border-right-width:0px"
+<table border="1" cellspacing="0" style="border-collapse: collapse; border-top-width:0px; border-right-width:0px" width="100%"
        bordercolor="#C0C0C0" bordercolorlight="#C0C0C0" bordercolordark="#C0C0C0" height="1" width="645"
        cellpadding="0">
 
