pagamento festivita automatiche e tabelle contributi inps parametriche 2012

--- a/src/python/colf/bustapaga/templates/bustapaga.html
+++ b/src/python/colf/bustapaga/templates/bustapaga.html
@@ -40,7 +40,7 @@
 </tr>
 <tr>
     <td colspan="4" style="padding:0; border-right-color:#C0C0C0">
-        <font face="Arial" size="1">Località: {{ mese.contratto.dl.indirizzo.cap }} - &nbsp;{{ mese.contratto.dl.indirizzo.comune }}&nbsp;&nbsp;({{ mese.contratto.dl.indirizzo.provincia }})</font></td>
+        <font face="Arial" size="1">Località: {{ mese.contratto.dl.indirizzo.cap }} - &nbsp;{{ mese.contratto.dl.indirizzo.localita.comune }}&nbsp;&nbsp;({{ mese.contratto.dl.indirizzo.localita.provincia }})</font></td>
 </tr>
 <tr>
     <td height="1" colspan="2" style="padding:0; border-left-color:#C0C0C0" rowspan="4">
@@ -61,7 +61,7 @@
 </tr>
 <tr>
     <td colspan="4" style="padding:0; border-right-color:#C0C0C0">
-        <font face="Arial" size="1">Località: {{ mese.contratto.dip.indirizzo.cap }} - &nbsp;{{ mese.contratto.dip.indirizzo.comune }}&nbsp;&nbsp;({{ mese.contratto.dip.indirizzo.provincia }})</font></td>
+        <font face="Arial" size="1">Località: {{ mese.contratto.dip.indirizzo.cap }} - &nbsp;{{ mese.contratto.dip.indirizzo.localita.comune }}&nbsp;&nbsp;({{ mese.contratto.dip.indirizzo.localita.provincia }})</font></td>
 
 </tr>
 <tr>
